// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput > should render the input correctly 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_c37d8e test-class"
    style="width: 600px;"
  >
    <label
      class="_label_5091d6"
      for="test-input-id"
    >
      <span
        class="_label_text_5091d6"
      >
        Test Input
      </span>
    </label>
    <div
      class="_wrapper_358de2"
    >
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        aria-readonly="false"
        autocomplete="off"
        class="_input_358de2"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        type="text"
        value=""
      />
      <span>
        <button
          aria-label="Clear input for Test Input"
          class="_button_a095c4"
          type="button"
        >
          <span
            class="_icon_afc5be chop-icon__delete"
          />
        </button>
      </span>
      <span
        aria-hidden="true"
        class="_errorMessage_2a3830 _errorMessage_c37d8e"
        id="test-input-id_error"
      >
        Error!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInput > should render the required input correctly 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_c37d8e test-class"
    style="width: 600px;"
  >
    <label
      class="_label_5091d6"
      for="test-input-id"
    >
      <span
        class="_label_text_5091d6"
      >
        Test Input
        <abbr
          title="required"
        >
          *
        </abbr>
      </span>
    </label>
    <div
      class="_wrapper_358de2"
    >
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        aria-readonly="false"
        autocomplete="off"
        class="_input_358de2"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        required=""
        type="text"
        value=""
      />
      <span>
        <button
          aria-label="Clear input for Test Input"
          class="_button_a095c4"
          type="button"
        >
          <span
            class="_icon_afc5be chop-icon__delete"
          />
        </button>
      </span>
      <span
        aria-hidden="true"
        class="_errorMessage_2a3830 _errorMessage_c37d8e"
        id="test-input-id_error"
      >
        Error!
      </span>
    </div>
  </div>
</DocumentFragment>
`;
